# Bootcamp-Python

./: README.md  pyproject.toml
Aula01/: README.md  kpi.py
Aula02/: README.md  exercicios.py  is_instance.py  try_except.py
Aula03/: README.md  exercicios.py  main.py
Aula04/: README.md  dicionarios.py  exemplo.csv  exemplo_lista.py  exercicios.py  funcoes.py  lendo_arquivos.py  type_hint.py
Aula05_One-Billion-Row-Challenge-Python/src/: create_measurements.py
Aula06/: main.py  pyproject.toml
Aula07/: etl.py  exemplo00.py  main.py  vendas.csv
Aula08/: pipeline.py  pyproject.toml
Aula08/data/: coleta_dia004.json
Aula09/: etl.py  exemplo00.py  loggin_exemplo_errors.py  time_decorator.py
Aula11/: init.py
Aula12/: csv-class.py  csv-test.py  exemplo.csv
Aula16/: pyproject.toml
