[tool.poetry]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Marcelo Augusto Kniss <marcelo.kniss@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
