[tool.poetry]
name = "aula08"
version = "0.1.0"
description = ""
authors = ["Marcelo Augusto Kniss <marcelo.kniss@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandera = "^0.20.4"
fastparquet = "^2024.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
