[tool.poetry]
name = "aula16"
version = "0.1.0"
description = ""
authors = ["Marcelo Augusto Kniss <marcelo.kniss@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
